# Investa

./: .gitignore  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: alembic.ini
backend/migrations/versions/: f811a190f21b_initial_migration.py
backend/src/: dependencies.py  main.py
backend/src/auth/: routers.py  service.py
backend/src/firstrade/: trade.py
backend/src/user/: schema.py  service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  package-lock.json  package.json  theme.tsx  vite.config.ts
frontend/src/components/: HeroSection.tsx  Navbar.tsx  Widget.tsx
frontend/src/components/Common/: Sidebar.tsx
frontend/src/pages/: Home.tsx
frontend/src/providers/: ChakraProvider.tsx
frontend/src/routes/: login.tsx  signup.tsx
migrations/: env.py
src/: config.py  database.py  dependencies.py  main.py  models.py
src/Trade/router/: trade.py
src/auth/: request.py  routers.py  schema.py  service.py
src/auth/router/: routers.py
src/auth/service/: auth.py
src/user/: routers.py  schema.py  service.py
