[tool.poetry]
name = "investa"
version = "0.1.0"
description = ""
authors = ["Aaron <qazxsw523625@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
