[tool.poetry]
name = "investa"
version = "0.1.0"
description = ""
authors = ["Aaron <qazxsw523625@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
firstrade = "^0.0.30"
pydantic-settings = "^2.7.1"
pyotp = "^2.9.0"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
pymysql = "^1.1.1"
cryptography = "^44.0.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
email-validator = "^2.2.0"
aiomysql = "^0.2.0"
greenlet = "^3.1.1"
bcrypt = "^4.2.1"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.1"

[tool.poe.tasks]
dev = "uvicorn src.main:app --reload --port 8001"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
